final mod on z-index to fix overlap of navBar

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -152,6 +152,9 @@ z-index: 0;
 .navBar {
 z-index: 1;
 }
+.searchBar {
+z-index: 2;
+}
 
 #rain-left {
     transform: translateX(20px);
